<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
        <item
            android:id="@+id/action_alpha"
            android:title="@string/title"
            android:icon="@drawable/ic_blank_24dp"/>

        <item
            android:id="@+id/action_last_read"
            android:title="@string/last_read"
            android:icon="@drawable/ic_blank_24dp"/>

        <item
            android:id="@+id/action_update"
            android:title="@string/latest_chapter"
            android:icon="@drawable/ic_blank_24dp"/>

        <item
            android:id="@+id/action_unread"
            android:title="@string/unread"
            android:icon="@drawable/ic_blank_24dp"/>

        <item
            android:id="@+id/action_total_chaps"
            android:title="@string/total_chapters"
            android:icon="@drawable/ic_blank_24dp"/>

        <item
            android:id="@+id/action_date_added"
            android:title="@string/date_added"
            android:icon="@drawable/ic_blank_24dp"/>
</menu>