<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CatalogueListActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/search"
        app:actionViewClass="eu.kanade.tachiyomi.ui.base.MiniSearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/action_display_mode"
        android:title="@string/display_as"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_toggle_have_already"
        android:title="@string/hide_library_manga"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_in_web_view"
        android:icon="@drawable/ic_open_in_webview_24dp"
        android:title="@string/open_in_webview"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_merged_source_in_web_view"
        android:icon="@drawable/ic_open_in_webview_24dp"
        android:title="@string/open_merged_in_webview"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_24dp"
        android:title="@string/settings"
        app:showAsAction="never" />

</menu>
