<?xml version="1.0" encoding="utf-8"?>
<remote-actions
    actionset_label="@string/app_name"
    version="1.2">
    <action
        id="tachiyomi_next_page"
        label="@string/next_page"
        priority="1"
        repeatable="true"
        repeatable_interval="short"
        trigger_key="E">
        <preference
            name="gesture"
            value="click" />
    </action>
    <action
        id="tachiyomi_previous_page"
        label="@string/previous_page"
        priority="2"
        repeatable="true"
        repeatable_interval="short"
        trigger_key="Q">
        <preference
            name="gesture"
            value="double_click" />
    </action>
    <action
        id="tachiyomi_back"
        label="@string/back"
        priority="3"
        repeatable="true"
        repeatable_interval="short"
        trigger_key="BACK">
        <preference
            name="gesture"
            value="circle_ccw" />
    </action>
    <action
        id="tachiyomi_next_chapter"
        label="@string/next_chapter"
        priority="4"
        repeatable="true"
        repeatable_interval="short"
        trigger_key="R">
        <preference
            name="gesture"
            value="swipe_right" />
    </action>
    <action
        id="tachiyomi_previous_chapter"
        label="@string/previous_chapter"
        priority="5"
        repeatable="true"
        repeatable_interval="short"
        trigger_key="L">
        <preference
            name="gesture"
            value="swipe_left" />
    </action>
</remote-actions>