<?xml version="1.0" encoding="utf-8"?>
<eu.kanade.tachiyomi.ui.manga.chapter.ChapterFilterLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingStart="16dp"
        android:paddingEnd="12dp"
        android:text="@string/filter" />

    <eu.kanade.tachiyomi.widget.TriStateCheckBox
        android:id="@+id/show_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/show_all" />

    <eu.kanade.tachiyomi.widget.TriStateCheckBox
        android:id="@+id/show_unread"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/show_unread_chapters" />

    <eu.kanade.tachiyomi.widget.TriStateCheckBox
        android:id="@+id/show_download"
        android:text="@string/show_downloaded_chapters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp" />

    <eu.kanade.tachiyomi.widget.TriStateCheckBox
        android:id="@+id/show_bookmark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/show_bookmarked_chapters" />
</eu.kanade.tachiyomi.ui.manga.chapter.ChapterFilterLayout>