<?xml version="1.0" encoding="utf-8"?>
<eu.kanade.tachiyomi.ui.reader.settings.ReaderGeneralView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filter_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:background="@drawable/bottom_sheet_rounded_background"
    android:forceDarkAllowed="false">

    <LinearLayout
        android:id="@+id/constraint_layout"
        style="@style/BottomSheetDialogTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingStart="@dimen/material_component_dialogs_padding_around_content_area"
        android:paddingTop="0dp"
        android:paddingEnd="@dimen/material_component_dialogs_padding_around_content_area">

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:textColor="?colorAccent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/series" />

        <eu.kanade.tachiyomi.widget.MaterialSpinnerView
            android:id="@+id/viewer_series"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:title="@string/reading_mode"
            android:entries="@array/viewers_selector" />

        <eu.kanade.tachiyomi.widget.MaterialSpinnerView
            android:id="@+id/rotation_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:title="@string/orientation"
            android:entries="@array/rotation_type" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:textColor="?colorAccent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/general" />

        <eu.kanade.tachiyomi.widget.MaterialSpinnerView
            android:id="@+id/background_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:title="@string/background_color"
            android:entries="@array/reader_themes" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/show_page_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/show_page_number"
            android:textColor="?android:attr/textColorPrimary" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/fullscreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/fullscreen"
            android:textColor="?android:attr/textColorPrimary" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/keepscreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/keep_screen_on"
            android:textColor="?android:attr/textColorPrimary" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/always_show_chapter_transition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/always_show_chapter_transition"
            android:textColor="?android:attr/textColorPrimary" />
    </LinearLayout>
</eu.kanade.tachiyomi.ui.reader.settings.ReaderGeneralView>