<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".CatalogueListActivity">

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_24dp"
        android:visible="false"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="eu.kanade.tachiyomi.ui.base.MiniSearchView"/>

    <item android:id="@+id/action_filter"
        android:title="@string/filter"
        android:icon="@drawable/ic_filter_list_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_more_vert_24dp"
        android:title="@string/more"
        app:showAsAction="ifRoom" />
</menu>
